# rndrx

./: .clang-format  .gitignore  CMakeLists.txt
assets/: CMakeLists.txt
assets/shaders/: fullscreen_quad.hlsl  simple_static_model.hlsl  skinned_model.hlsl  static_model.hlsl
cmake/: dxc.cmake  models.cmake  shaders.cmake  symlink.cmake  textures.cmake
dx12/: CMakeLists.txt  fullscreen_quad.hlsl  glfw_main.cpp  imgui_integration.cpp  main.cpp  pso_caching.cpp  pso_caching.h
examples/: CMakeLists.txt  minimal.cpp  rndrx-vulkan-sample.cpp
include/rndrx/: assert.hpp  attachment_ops.hpp  bounding_box.hpp  config.hpp  formats.hpp  frame_graph.hpp  frame_graph_description.hpp  image_format.hpp  log.hpp  noncopyable.hpp  scope_exit.hpp  throw_exception.hpp  to_vector.hpp
include/rndrx/vulkan/: animation.hpp  application.hpp  composite_render_pass.hpp  device.hpp  draw_primitive.hpp  formats.hpp  frame_graph.hpp  frame_graph_builder.hpp  gltf_model_creator.hpp  image.hpp  imgui_render_pass.hpp  material.hpp  mesh.hpp  model.hpp  render_context.hpp  render_target.hpp  renderer.hpp  scene.hpp  shader_cache.hpp  submission_context.hpp  swapchain.hpp  texture.hpp  window.hpp
include/rndrx/vulkan/gltf/: model.hpp
include/rndrx/vulkan/vma/: allocator.hpp  buffer.hpp  image.hpp
src/: CMakeLists.txt  bounding_box.cpp  config.cpp  frame_graph.cpp  frame_graph_description.cpp  tiny_gltf_impl.cpp
src/dx12/: CMakeLists.txt  d3dcompile.cpp  main.cpp
src/vulkan/: CMakeLists.txt  application.cpp  application.hpp  composite_render_pass.cpp  composite_render_pass.hpp  device.cpp  device.hpp  draw_primitive.cpp  frame_graph.cpp  frame_graph_builder.cpp  gltf_model_creator.cpp  imgui_render_pass.cpp  imgui_render_pass.hpp  load_scene.cpp  main.cpp  mesh.cpp  minimal.cpp  model.cpp  renderer.cpp  scene.cpp  shader_cache.cpp  shader_cache.hpp  submission_context.cpp  submission_context.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  window.cpp  window.hpp
src/vulkan/gltf/: model.cpp  model.hpp  scene.cpp  scene.hpp
src/vulkan/vma/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  image.cpp
vulkan/: CMakeLists.txt  main.cpp
